--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,52 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+:root {
+  --primary-color: #398278;
+  --secondary-color: white;
+}
+
+* {
+  box-sizing: border-box;
+  color: var(--secondary-color);
+}
+
+html, body, #root, .app {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  background: linear-gradient(to right, #536976, #292e49);
+  padding-top: 50px;
+}
+
+input {
+  height: 30px;
+  border: 0;
+  color: black;
+  padding: 10px;
+  margin: 5px;
+  background: var(--secondary-color);
+}
+
+input::placeholder {
+  color: lightgrey;
+}
+
+button {
+  border: 0;
+  height: 30px;
+  background: black;
+  border-radius: 50px;
+  padding: 0px 20px;
+  background: var(--primary-color);
+  cursor: pointer;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
