--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
 
 :root {
   --primary-color: #398278;
-  --secondary-color: white;
+  --secondary-color: #fff;
 }
 
 * {
@@ -20,11 +20,15 @@ body {
 html, body, #root, .app {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 body {
   background: linear-gradient(to right, #536976, #292e49);
-  padding-top: 50px;
+  padding: 50px 20px 0px;
+  max-width: 1024px;
 }
 
 input {
@@ -54,4 +58,19 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.search-results {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.search-results-header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--secondary-color);
+  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
