--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,15 @@ input::placeholder {
   color: lightgrey;
 }
 
+input[type="radio"] {
+  appearance: none;
+  width: 0;
+  height: 0;
+  border: 0;
+  padding: 0;
+  margin: 0;
+}
+
 button {
   border: 0;
   height: 30px;
@@ -60,7 +69,7 @@ button {
   color: var(--secondary-color);
 }
 
-ol {
+ul, ol {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -76,6 +85,7 @@ h5 {
 
 h2 {
   font-size: 16px;
+  margin: 10px 0;
 }
 
 .app {
@@ -185,15 +195,19 @@ h2 {
 
 .tv-details {
   display: flex;
-  padding: 20px;
+  justify-content: center;
   flex-wrap: wrap;
+  padding: 20px;
+  max-width: 800px;
 }
 
 .tv-details-poster {
-  width: 300px;
-  height: 450px;
+  max-width: 300px;
   margin-right: 20px;
-  flex-shrink: 0;
+}
+
+.tv-details-summary {
+  width: 440px;
 }
 
 .tv-details-status {
@@ -201,21 +215,34 @@ h2 {
   min-height: 18px;
 }
 
+.tv-details-creators {
+  display: flex;
+}
+
+.tv-details-creator {
+  display: flex;
+  flex-direction: column;
+  margin-right: 30px;
+  font-size: 14px;
+}
+
 .tv-details-seasons {
   display: flex;
+  flex-direction: column;
   width: 100%;
 }
 
 .tv-details-season {
   background-color: #734aa0;
   cursor: pointer;
-  width: 24px;
   height: 24px;
+  padding: 5px;
+  margin-right: 5px;
+  margin-bottom: 5px;
   font-size: smaller;
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  margin-right: 5px;
 }
 
 .modal {
@@ -224,19 +251,22 @@ h2 {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
 }
 
 .modal-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background-color: #323338b8;
+  z-index: -1;
 }
 
 .modal-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   background-color: #3f5855;
 }
