--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
   --tertiary-color: #dedede;
   --accent-color: #8b5aa6;
 
-  --font-color: #3c3f40;
+  --font-color: #2c3e50;
 }
 
 * {
@@ -31,7 +31,7 @@ html, body, #root, .app {
 
 body {
   background-color: white;
-  color: #2c3e50;
+  color: var(--font-color);
 }
 
 header {
@@ -54,12 +54,7 @@ main {
 }
 
 input {
-  height: 30px;
   border: 0;
-  color: black;
-  padding: 10px;
-  margin: 5px;
-  background: var(--secondary-color);
 }
 
 input::placeholder {
@@ -80,7 +75,6 @@ button {
   padding: 0;
   background: 0;
   cursor: pointer;
-  color: var(--secondary-color);
   font-family: 'Roboto', sans-serif;
 }
 
@@ -117,6 +111,7 @@ h2 {
   height: 100%;
   padding: 20px;
   font-weight: bold;
+  color: white;
 }
 
 .header-search {
@@ -155,265 +150,4 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.search-results {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.search-results-header {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding-bottom: 10px;
-  margin-bottom: 30px;
-}
-
-.search-results-body {
-  width: 100%;
-  display: grid;
-  grid-auto-flow: row;
-  justify-content: space-between;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 20px;
-}
-
-.media {
-  max-height: calc(100vh - 217px);
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  background-color: white;
-  padding: 0;
-  cursor: pointer;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-}
-
-.media-poster {
-  position: relative;
-  width: 100%;
-  background-color: white;
-  overflow: hidden;
-  object-fit: cover;
-  object-position: center center;
-}
-
-.media-poster-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  object-fit: cover;
-}
-
-.media-poster::before {
-  content: '';
-  padding-bottom: calc(100% * 1.5);
-  display: block;
-}
-
-.media-poster::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: inherit;
-}
-
-.media-summary {
-  display: flex;
-  width: 100%;
-  height: 60px;
-  align-content: center;
-  justify-content: flex-start;
-  flex-shrink: 0;
-}
-
-.media-votes {
-  display: flex;
-  position: relative;
-  color: var(--accent-color);
-  stroke-width: 0;
-  align-items: center;
-  padding: 0 15px;
-}
-
-.media-votes-average {
-  color: black;
-  font-weight: bold;
-  font-size: 24px;
-}
-
-.media-title {
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
-  overflow: hidden;
-  margin-top: auto;
-  margin-bottom: auto;
-  width: 100%;
-  text-align: left;
-  padding: 5px 10px;
-  color: black;
-}
-
-.media-year {
-  font-size: 14px;
-  color: grey;
-  margin-left: 5px;
-}
-
-.tv .media-type {
-  background-color: #d45a51;
-  color: white;
-}
-
-.tv-details {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 20px;
-  max-width: 800px;
-}
-
-.tv-details-name {
-  margin-bottom: 5px;
-}
-
-.tv-details-year {
-  font-size: 16px;
-  color: #ffffff50;
-  margin-left: 5px;
-  margin-bottom: 6px;
-}
-
-.tv-details-poster {
-  max-width: 300px;
-  margin-right: 20px;
-}
-
-.tv-details-summary {
-  width: 440px;
-}
-
-.tv-details-overview {
-  margin-top: 0;
-}
-
-.tv-details-votes {
-  position: relative;
-  display: inline-flex;
-  color: var(--accent-color);
-}
-
-.tv-details-votes-average {
-  position: absolute;
-  top: 53%;
-  left: 51%;
-  transform: translate(-50%, -50%);
-  color: white;
-  font-size: 12px;
-  font-weight: bold;
-}
-
-.tv-details-status {
-  display: flex;
-  min-height: 18px;
-}
-
-.tv-details-creators {
-  display: flex;
-}
-
-.tv-details-creator {
-  display: flex;
-  flex-direction: column;
-  margin-right: 30px;
-  font-size: 14px;
-}
-
-.tv-details-seasons {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-
-.tv-details-season {
-  background-color: #734aa0;
-  cursor: pointer;
-  height: 24px;
-  padding: 5px;
-  margin-right: 5px;
-  margin-bottom: 5px;
-  font-size: smaller;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  user-select: none;
-  border-radius: 0;
-}
-
-.season {
-  display: flex;
-  margin-top: 15px;
-  height: 235px;
-  overflow: hidden;
-}
-
-.season-name {
-  margin-top: 0;
-  font-size: 24px;
-  margin-bottom: 0;
-}
-
-.season-shorthand-details {
-  font-size: 14px;
-}
-
-.season-overview {
-  height: 173px;
-  overflow-y: auto;
-  margin-bottom: 0;
-}
-
-.season-poster {
-  flex-shrink: 0;
-  width: 150px;
-  height: 235px;
-  margin-right: 20px;
-}
-
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
-}
-
-.modal-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #323338b8;
-  z-index: -1;
-}
-
-.modal-content {
-  color: #505050;
-  background-color: #ffffff;
 }
