--- a/src/components/pager/Pager.css
+++ b/src/components/pager/Pager.css
@@ -14,7 +14,7 @@
 	align-items: center;
 	justify-content: center;
 	font-weight: bold;
-	background-color: #2980b9;
+	background-color: #2c3e50;
 	color: white;
 	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
 	width: 80px;
